--- a/stream/public/index.html
+++ b/stream/public/index.html
@@ -27,12 +27,13 @@
 
 <body>
     <div class="container">
-        <p class="note">Room mode: SFU</p>
+        <p class="note">SFU Room Stream</p>
         <div class="room">
             <div>
                 <input type="text" placeholder="Room Name" id="js-room-id">
                 <button id="js-join-trigger">Join</button>
                 <button id="js-leave-trigger">Leave</button>
+                <p id="js-room-check"></p>
                 <p id="js-room-members"></p>
                 <button id="change-time"></button>
                 <video id="js-local-stream"></video>
