--- a/viewer/public/index.html
+++ b/viewer/public/index.html
@@ -28,7 +28,7 @@
 
 <body>
     <div class="container">
-        <p class="note">Room mode: SFU</p>
+        <p class="note">SFU Room Viewer</p>
         <div class="index">
             <button id="select">select</button>
             <p id="js-select-num">0人</p>
