--- a/content/public/index.html
+++ b/content/public/index.html
@@ -14,22 +14,19 @@
     <meta property="og:image" content="img/thumbnail.png">
 
     <script src="./bundle.js" defer></script>
-
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
-    <script defer src="https://use.fontawesome.com/releases/v5.6.3/js/all.js"></script>
+    <script src="./index.js" defer></script>
   
     <style>
-        body { margin: 0; padding: 0; font-family: Helvetica} 
+        body { margin: 0; padding: 0; font-family: Helvetica;} 
+        #video {width: 100%; }
         #target { display: none;}
     </style>
 </head>
 
 <body>
     <div class="container">
-        <video id="video" autoplay muted loop width="100%">
+        <video id="video" autoplay muted loop>
             <source id="video-source" src="./movies/yolo.mp4" type="video/mp4">
-        
-            Sorry, your browser doesn't support embedded videos.
         </video>
         <form id="target">
             <label><input type="radio" name="mode" value="0">0</label>
@@ -37,7 +34,5 @@
         </form>
         <button id="unmuteButton"></button>
     </div>
-    <script src="https://cdn.webrtc.ecl.ntt.com/skyway-4.4.1.js" defer></script>
-    <script src="./index.js" defer></script>
 </body>
 </html>
