--- a/viewer/public/index.html
+++ b/viewer/public/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Noise selection/rejection filter</title>
     <meta name="description" content="'Noise selection/rejection filter'は情報科学芸術大学院大学メディア表現研究科修士2年の天野真が制作した作品である。">
-    <!-- <link rel="icon" href="dist/icon.ico"> -->
+    <link rel="icon" href="img/favicon.ico">
 
     <meta property="og:title" content="Noise selection/rejection filter">
     <meta property="og:type" content="website">
@@ -13,8 +13,6 @@
     <meta property="og:site_name" content="Noise selection/rejection filter">
     <meta property="og:image" content="img/thumbnail.png">
 
-    <!-- <script src="https://cdn.webrtc.ecl.ntt.com/skyway-4.4.1.js" defer></script> -->
-    <!-- <script src="./video.js" defer></script> -->
     <script src="bundle.js" defer></script>
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
@@ -42,7 +40,7 @@
             </div>
         </div>
         <div class="ui">
-            <input type="radio" name="label" value="0" id="param"><i class="fas fa-male"></i>
+            <input type="radio" name="label" value="0" id="param" checked><i class="fas fa-male"></i>
             <input type="radio" name="label" value="1" id="param"><i class="fas fa-car-alt"></i>           
         </div>
     </div>
