--- a/viewer/public/index.html
+++ b/viewer/public/index.html
@@ -20,18 +20,22 @@
   
     <style>
         body { margin: 0; padding: 0; font-family: Helvetica; }
-        #change-time { display: none;}
+        #change-time { display: none; }
+        .index { margin: 10px; position: absolute; }
+        #js-select-num { margin: 0; z-index: 10; }
+        .room { z-index: -1; position: relative;}
+        #ui { z-index: 10; position: absolute; bottom: 10px; width: 100%; height: 100px;}
+        /* input[type=radio] { display: none;} */
+        #target{ position:relative; width:50%; margin:0 auto; text-align: center;}
+        #label { width: 100px; height: 100px; margin:0 auto;}
     </style>
 </head>
 
 <body>
     <div class="container">
-        <p class="note">SFU Room Viewer</p>
         <div class="index">
-            <button id="select">select</button>
+            <button id="select">Button modalで説明文などを表示するのに変更する。</button>
             <p id="js-select-num">0人</p>
-            <button id="reject">reject</button>
-            <p id="js-reject-num">0人</p>
         </div>
         <div class="room">
             <div>
@@ -39,9 +43,11 @@
                 <button id="change-time"></button>
             </div>
         </div>
-        <div class="ui">
-            <input type="radio" name="label" value="0" id="param" checked><i class="fas fa-male"></i>
-            <input type="radio" name="label" value="1" id="param"><i class="fas fa-car-alt"></i>           
+        <div id="ui">
+            <form id="target">
+                <label id="label"><input type="radio" name="mode" value="0" id="param"><i class="fas fa-male"></i></label>
+                <label id="label"><input type="radio" name="mode" value="1" id="param"><i class="fas fa-car-alt"></i></label>          
+            </form>
         </div>
     </div>
 
