--- a/viewer/public/index.html
+++ b/viewer/public/index.html
@@ -13,45 +13,90 @@
     <meta property="og:site_name" content="Noise selection/rejection filter">
     <meta property="og:image" content="img/thumbnail.png">
 
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+
+
     <script src="bundle.js" defer></script>
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
     <script defer src="https://use.fontawesome.com/releases/v5.6.3/js/all.js"></script>
   
     <style>
-        body { margin: 0; padding: 0; font-family: Helvetica; }
+        body { margin: 0; padding: 0; font-family: Helvetica; background: black;}
+        .container-fluid { padding-left: 0px; padding-right: 0px;}
         #change-time { display: none; }
-        .index { margin: 10px; position: absolute; }
+        #change-num {display: none;}
+        .index { margin: 1% 0 0 1%; position: absolute; }
         #js-select-num { margin: 0; z-index: 10; }
         .room { z-index: -1; position: relative;}
-        #ui { z-index: 10; position: absolute; bottom: 10px; width: 100%; height: 100px;}
-        /* input[type=radio] { display: none;} */
-        #target{ position:relative; width:50%; margin:0 auto; text-align: center;}
-        #label { width: 100px; height: 100px; margin:0 auto;}
+        #ui { z-index: 10; position: absolute; width: 100%; right: 40%; bottom: 10%;}
+
+        .vertical-center {min-height: 100%; min-height: 100vh; display: flex; align-items: center;}
+
+        #modal-button { display: none;}
+
+        .main-wrapper {border-radius: 4px; background-color: white; margin: 0% 5% 0% 85%; padding: 1%; box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23); position: relative; }
+        .icons-wrapper {margin: 0px auto; text-align: center;}
+        i.material-icons { font-size: 1.5rem; background-color: #cd8484; color: white; position: relative; border-radius: 50%; margin: 3px; box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);}
+        i.material-icons:after {content: ""; width: 100%; height: 100%; border: solid 2px; transform: scale(0.8); position: absolute; top: 0px; left: 0px; border-radius: 50%; border-color: #cd8484;}
+        i.material-icons:hover:after {transform: scale(1);box-shadow: 10px 0 20px rgba(0, 0, 0, 0.19), 6px 0 6px rgba(0, 0, 0, 0.23); }
+        i.material-icons:hover {color: #cd8484; background-color: transparent; cursor: pointer; box-shadow: none;}
+        .human-tag {padding: 6px 16px;}
+        .car-tag {padding: 6px 9px;}
     </style>
 </head>
 
 <body>
-    <div class="container">
-        <div class="index">
-            <button id="select">Button modalで説明文などを表示するのに変更する。</button>
-            <p id="js-select-num">0人</p>
-        </div>
-        <div class="room">
-            <div>
-                <div class="remote-streams" id="js-remote-streams"></div>
-                <button id="change-time"></button>
-            </div>
+    <div class="container-fluid">
+        <div class="index" id="human-num">
+            <p id="js-select-num">0</p>
         </div>
         <div id="ui">
-            <form id="target">
-                <label id="label"><input type="radio" name="mode" value="0" id="param"><i class="fas fa-male"></i></label>
-                <label id="label"><input type="radio" name="mode" value="1" id="param"><i class="fas fa-car-alt"></i></label>          
-            </form>
+            <div class="main-wrapper">
+                <div class="icons-wrapper">
+                    <i id="human-button" class="material-icons human-tag">
+                        <i class="fas fa-male"></i></i>
+                        <!-- <svg class="svg-inline--fa fa-male fa-w-6" aria-hidden="true" data-prefix="fas" data-icon="male" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 192 512" data-fa-i2svg="">
+                            <path fill="currentColor" d="M96 0c35.346 0 64 28.654 64 64s-28.654 64-64 64-64-28.654-64-64S60.654 0 96 0m48 144h-11.36c-22.711 10.443-49.59 10.894-73.28 0H48c-26.51 0-48 21.49-48 48v136c0 13.255 10.745 24 24 24h16v136c0 13.255 10.745 24 24 24h64c13.255 0 24-10.745 24-24V352h16c13.255 0 24-10.745 24-24V192c0-26.51-21.49-48-48-48z"></path>
+                        </svg> -->
+                    </i>
+                    <i id="car-button" class="material-icons car-tag">
+                        <!-- <i class="fas fa-car-alt"></i> -->
+                        <svg class="svg-inline--fa fa-car-alt fa-w-15" aria-hidden="true" data-prefix="fas" data-icon="car-alt" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 480 512" data-fa-i2svg="">
+                            <path fill="currentColor" d="M438.66 212.33l-11.24-28.1-19.93-49.83C390.38 91.63 349.57 64 303.5 64h-127c-46.06 0-86.88 27.63-103.99 70.4l-19.93 49.83-11.24 28.1C17.22 221.5 0 244.66 0 272v48c0 16.12 6.16 30.67 16 41.93V416c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32v-32h256v32c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32v-54.07c9.84-11.25 16-25.8 16-41.93v-48c0-27.34-17.22-50.5-41.34-59.67zm-306.73-54.16c7.29-18.22 24.94-30.17 44.57-30.17h127c19.63 0 37.28 11.95 44.57 30.17L368 208H112l19.93-49.83zM80 319.8c-19.2 0-32-12.76-32-31.9S60.8 256 80 256s48 28.71 48 47.85-28.8 15.95-48 15.95zm320 0c-19.2 0-48 3.19-48-15.95S380.8 256 400 256s32 12.76 32 31.9-12.8 31.9-32 31.9z"></path>
+                        </svg>
+                    </i>
+                </div>
+            </div>
+        </div>
+        <div class="room vertical-center">
+            <div class="remote-streams" id="js-remote-streams"></div>
+            <button id="change-time"></button>
+            <button id="change-num"></button>
+        </div>
+    </div>
+
+    <button type="button" id="modal-button" class="btn btn-primary" data-toggle="modal" data-target=".textmodal"></button>
+    <div class="modal fade textmodal" data-backdrop="static" role="dialog">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalTitle">Noise selection/rejection filter</h5>
+                </div>
+                <div class="modal-body">
+                    説明文をここに記す。
+                </div>
+                <div class="modal-footer">
+                    <button type="button" id="select-button" class="btn btn-outline-dark" data-dismiss="modal">Close</button>
+                </div>
+            </div>
         </div>
     </div>
 
     <script src="https://cdn.webrtc.ecl.ntt.com/skyway-4.4.1.js" defer></script>
     <script src="./video.js" defer></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 </body>
 </html>
