--- a/viewer/public/index.html
+++ b/viewer/public/index.html
@@ -23,36 +23,33 @@
   
     <style>
         body { margin: 0; padding: 0; font-family: Helvetica; background: black;}
+        p { margin-top: 0rem; margin-bottom: 0rem; }
         .container-fluid { padding-left: 0px; padding-right: 0px;}
+
+        .index { margin: 1% 0 0 1%; position: absolute; width: 100%;}
+        #js-select-num { margin: 0; z-index: 10; display: none;}
+
+        .room { z-index: -1; position: relative;}
+        .vertical-center {min-height: 100vh; display: flex; align-items: center;}
         #change-time { display: none; }
         #change-num {display: none;}
-        .index { margin: 1% 0 0 1%; position: absolute; width: 100%;}
-        #js-select-num { margin: 0; z-index: 10; }
-        .room { z-index: -1; position: relative;}
-        #ui { z-index: 10; position: absolute; width: 100%; right: 40%; bottom: 10%;}
-
-        .vertical-center {min-height: 100vh; display: flex; align-items: center;}
 
         #modal-button { display: none;}
+        .modal-header { padding: 1rem 2rem;}
+        .modal-body { padding: 2rem;}
 
-        #human-icons { padding: 0% 0.5%; color: red;}
+        #human-icons { padding: 0% 0.5%; color: #079ad9; font-size: 2rem;}
 
-        .main-wrapper {border-radius: 4px; background-color: white; margin: 0% 3% 0% 83%; padding: 1%; box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23); position: relative; }
-        .icons-wrapper {margin: 5% auto; text-align: center;}
-        i.material-icons { font-size: 1.5rem; background-color: #cd8484; color: white; position: relative; border-radius: 50%; margin: 1%; box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);}
-        i.material-icons:after {content: ""; width: 100%; height: 100%; border: solid 2px; transform: scale(0.8); position: absolute; top: 0px; left: 0px; border-radius: 50%; border-color: #cd8484;}
-        i.material-icons:hover:after {transform: scale(1);box-shadow: 10px 0 20px rgba(0, 0, 0, 0.19), 6px 0 6px rgba(0, 0, 0, 0.23); }
-        i.material-icons:hover {color: #cd8484; background-color: transparent; cursor: pointer; box-shadow: none;}
-        .human-tag {padding: 9% 15%;}
-        .car-tag {padding: 9% 10%;}
-        @media (max-width: 1230px) {
-            i.material-icons { margin: 0.5%; font-size: 1.0rem;}
-            .human-tag {padding: 9% 16%;}
-            .car-tag {padding: 9% 11%;}
-        }
-        @media (max-width: 500px) {
-            .main-wrapper { margin: 0% 0% 0% 80%;}
-        }
+        .ui { z-index: 15; position: absolute; left: 50%; transform: translateX(-50%); bottom: 10%;}
+        .radio-tile-group { display: flex; flex-wrap: wrap; justify-content: center; }
+        .input-container { position: relative; height: 4rem; width: 4rem; margin: 0.5rem;} 
+        .radio-button { opacity: 0; position: absolute; top: 0; left: 0; height: 100%; width: 100%; margin: 0; cursor: pointer; }
+        .radio-tile { display: flex; flex-direction: column; align-items: center; justify-content: center; width: 100%; height: 100%; border: 2px solid #079ad9; border-radius: 5px; padding: 1rem; transition: transform 300ms ease; }
+        .icon svg { fill: #079ad9; width: 1.5rem; height: 1.5rem; }
+        .radio-tile-label { text-align: center; font-size: 0.5rem; font-weight: 600; text-transform: uppercase; letter-spacing: 1px; color: #079ad9; margin-bottom: 0px;}
+        .radio-button:checked + .radio-tile { background-color: #079ad9; border: 2px solid #079ad9; color: white; transform: scale(1.1, 1.1); }
+        .icon svg { fill: white;}
+        .radio-tile-label { color: white;}
     </style>
 </head>
 
@@ -61,24 +58,68 @@
         <div class="index" id="human-num">
             <p id="js-select-num">0</p>
         </div>
-        <div id="ui">
-            <div class="main-wrapper">
-                <div class="icons-wrapper">
-                    <i id="human-button" class="material-icons human-tag">
-                        <i class="fas fa-male"></i></i>
-                        <!-- <svg class="svg-inline--fa fa-male fa-w-6" aria-hidden="true" data-prefix="fas" data-icon="male" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 192 512" data-fa-i2svg="">
-                            <path fill="currentColor" d="M96 0c35.346 0 64 28.654 64 64s-28.654 64-64 64-64-28.654-64-64S60.654 0 96 0m48 144h-11.36c-22.711 10.443-49.59 10.894-73.28 0H48c-26.51 0-48 21.49-48 48v136c0 13.255 10.745 24 24 24h16v136c0 13.255 10.745 24 24 24h64c13.255 0 24-10.745 24-24V352h16c13.255 0 24-10.745 24-24V192c0-26.51-21.49-48-48-48z"></path>
-                        </svg> -->
-                    </i>
-                    <i id="car-button" class="material-icons car-tag">
-                        <!-- <i class="fas fa-car-alt"></i> -->
-                        <svg class="svg-inline--fa fa-car-alt fa-w-15" aria-hidden="true" data-prefix="fas" data-icon="car-alt" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 480 512" data-fa-i2svg="">
-                            <path fill="currentColor" d="M438.66 212.33l-11.24-28.1-19.93-49.83C390.38 91.63 349.57 64 303.5 64h-127c-46.06 0-86.88 27.63-103.99 70.4l-19.93 49.83-11.24 28.1C17.22 221.5 0 244.66 0 272v48c0 16.12 6.16 30.67 16 41.93V416c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32v-32h256v32c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32v-54.07c9.84-11.25 16-25.8 16-41.93v-48c0-27.34-17.22-50.5-41.34-59.67zm-306.73-54.16c7.29-18.22 24.94-30.17 44.57-30.17h127c19.63 0 37.28 11.95 44.57 30.17L368 208H112l19.93-49.83zM80 319.8c-19.2 0-32-12.76-32-31.9S60.8 256 80 256s48 28.71 48 47.85-28.8 15.95-48 15.95zm320 0c-19.2 0-48 3.19-48-15.95S380.8 256 400 256s32 12.76 32 31.9-12.8 31.9-32 31.9z"></path>
-                        </svg>
-                    </i>
+
+        <div class="ui">
+            <div class="radio-tile-group">
+
+                <div class="input-container">
+                    <input id="view" class="radio-button" type="radio" name="radio" />
+                    <div class="radio-tile">
+                        <div class="icon view-icon">
+                            <svg fill="#000000" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                <path d="M20.88,13.22l-6.52-9.9a.75.75,0,0,0-1.23,0l-4.63,7L7.39,9.06s-.18-.24-.51,0L4.52,11.83a.54.54,0,0,0-.09.58.51.51,0,0,0,.44.32h.65L3.8,14.88a.57.57,0,0,0,0,.57.48.48,0,0,0,.45.3l.66,0L3.13,17.86a.58.58,0,0,0-.08.59.46.46,0,0,0,.45.3h3v.57l-.65,1.14s-.15.53.29.54H8.16s.48,0,.33-.54l-.66-1.14v-.58h3a.55.55,0,0,0,.46-.31.56.56,0,0,0-.09-.59L9.42,15.7l.66,0s.3.07.47-.31a.6.6,0,0,0-.08-.56l-.42-.54H11l0,0a1.37,1.37,0,0,1,.17,1.38,1.12,1.12,0,0,1-.39.51l.89,1.11c.37.39.31.61.31.61l0,.78v.57l-.65,1.14s-.15.53.29.54h2.06s.48,0,.33-.54l-.66-1.14v-.58h3a.55.55,0,0,0,.46-.31.56.56,0,0,0-.09-.59L14.93,15.7l.66,0s.3.07.47-.31a.6.6,0,0,0-.08-.56l-.42-.54h4.71a.74.74,0,0,0,.64-.36A.69.69,0,0,0,20.88,13.22ZM13.75,8,12.7,9a.43.43,0,0,0-.31.09l-.18.22-.78-.76L13.75,5,15.68,8Z"/>
+                                <path d="M6.23,7.57A1.74,1.74,0,1,0,4.52,5.83,1.73,1.73,0,0,0,6.23,7.57Z"/>
+                            </svg>
+                        </div>
+                        <label for="view" class="radio-tile-label">ALL</label>
+                    </div>
                 </div>
+
+                <div class="input-container">
+                    <input id="human" class="radio-button" type="radio" name="radio" />
+                    <div class="radio-tile">
+                        <div class="icon walk-icon">
+                            <svg fill="#000000" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                <ellipse cx="12.74" cy="4.89" rx="1.73" ry="1.68"/>
+                                <path d="M20.92,19.76l-8.33-8.37a6.55,6.55,0,0,1,.24-.73,5.67,5.67,0,0,0,4.45,2V11a4.38,4.38,0,0,1-3.76-2.26,8.28,8.28,0,0,0-1.19-1.54c-.59-.44-1.9,0-1.9,0L9,7.8,4.31,3.08a.28.28,0,0,0-.39,0l-.84.78a.26.26,0,0,0,0,.38L7.35,8.53h0L8.45,9.67h0l.84.84v0L14,15.21v0l5.72,5.74a.28.28,0,0,0,.39,0l.84-.78A.26.26,0,0,0,20.92,19.76Z"/>
+                                <polygon points="8.1 11.77 6.46 10.13 6.46 12.63 8.1 12.63 8.1 11.77"/>
+                                <polygon points="7.25 20.75 9.09 20.75 10.56 14.24 8.9 12.57 7.25 20.75"/>
+                                <polygon points="12.27 20.75 13.95 20.75 13.96 17.66 12.29 15.98 12.27 20.75"/>
+                            </svg>
+                        </div>
+                        <label for="human" class="radio-tile-label">HUMAN</label>
+                    </div>
+                </div>
+          
+                <div class="input-container">
+                    <input id="car" class="radio-button" type="radio" name="radio" />
+                    <div class="radio-tile">
+                        <div class="icon car-icon">
+                            <svg fill="#000000" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                <path d="M20.92,19.76l-.38-.39a.79.79,0,0,0,.16-.5v-8L18.59,4.94a1.23,1.23,0,0,0-1.16-.79H6.34a1.39,1.39,0,0,0-.55.09L4.65,3.08a.27.27,0,0,0-.38,0l-.82.78a.27.27,0,0,0,0,.38L4.89,5.72v0L6,6.85v0L9,10H9l7.66,7.85h0l1,1v0l.86.88h0l1.14,1.16a.27.27,0,0,0,.38,0l.82-.78A.26.26,0,0,0,20.92,19.76Zm-5.15-6.32a1.49,1.49,0,1,1,1.49,1.48A1.48,1.48,0,0,1,15.77,13.44ZM7.09,5.58H17.24L18.74,10H11.36Z"/>
+                                <path d="M5,10,5.4,8.67,4.24,7.48,3,10.87V19s.25.8.86.8H5.21A.9.9,0,0,0,6,18.87v-1l8.36,0L6.66,10Zm3,3.38a1.49,1.49,0,1,1-1.48-1.48A1.47,1.47,0,0,1,8,13.34Z"/>
+                            </svg>
+                        </div>
+                        <label for="car" class="radio-tile-label">CAR</label>
+                    </div>
+                </div>
+
+                <div class="input-container">
+                    <input id="bird" class="radio-button" type="radio" name="radio" />
+                    <div class="radio-tile">
+                        <div class="icon bird-icon">
+                            <svg fill="#000000" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                <path d="M20.92,20.34l-3.84-3.86a8.68,8.68,0,0,0,1.16-1.23,8,8,0,0,0,1.64-7,3.37,3.37,0,0,0-.33-.72L19.26,7l0-.1a4.64,4.64,0,0,0,.38-1.58,12.51,12.51,0,0,0-1.6.45,1.93,1.93,0,0,1-.45.08,5.8,5.8,0,0,0-2.57.71,4.79,4.79,0,0,0-1.65,1.38,11.39,11.39,0,0,0-1.1,1.83l-.18.36-.66-.19q-.64-.18-1.23-.3l-5.94-6a.28.28,0,0,0-.39,0l-.84.79a.26.26,0,0,0,0,.38l4.58,4.6h0l8,8h0l4.06,4.07a.28.28,0,0,0,.39,0l.84-.79A.26.26,0,0,0,20.92,20.34Z"/>
+                                <path d="M5.59,10.18a2.14,2.14,0,0,0-.8,1.39,2.27,2.27,0,0,0,.41,1.14A3.25,3.25,0,0,0,6.6,14l.18,0-.11.16a3.68,3.68,0,0,0-.51,1.26,2,2,0,0,0,0,.73,1.74,1.74,0,0,0,.65.91c.07.06.08.07,0,.08l-1.74.59-1.72.57s1,1.77,1,1.78,1.31-.62,4.09-2l.65-.32.41.09a10.25,10.25,0,0,0,4.24.15l-8-8Z"/>
+                            </svg>
+                        </div>
+                        <label for="bird" class="radio-tile-label">BIRD</label>
+                    </div>
+                </div>
+
             </div>
         </div>
+        
         <div class="room vertical-center">
             <div class="remote-streams" id="js-remote-streams"></div>
             <button id="change-time"></button>
@@ -91,13 +132,22 @@
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="modalTitle">Noise selection/rejection filter</h5>
+                    <h5 class="modal-title" id="modalTitle"><strong>Noise selection/rejection filter</strong></h5>
                 </div>
                 <div class="modal-body">
-                    説明文をここに記す。
+                    <p>
+                        修士作品の中間制作物をオンラインで展示する。音の聴取環境を選択的に構築することができるノイズキャンセリング・フィルターは、システムで規定した望まない音を「ノイズ」というラベルを付けて排斥する。ユーザーである我々の知覚は無自覚に変容し、システムの一方的な排除構造に気がつかない。本作品では、都市空間を散策する映像・音に対し、選択的にフィルタリングをかける。鑑賞者の選択によって映像・音が動的に変化し、排除していることを際立たせる。
+                    </p>
+                    <hr>
+                    <p>
+                        <strong>天野 真 / Makoto Amano</strong>
+                    </p></br>
+                    <p>
+                        1997年福岡県生まれ。情報科学芸術大学院大学メディア表現研究科(IAMAS) Archival Archetyping Project 所属。
+                    </p>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" id="select-button" class="btn btn-outline-dark" data-dismiss="modal">Close</button>
+                    <button type="button" id="exit-button" class="btn btn-outline-dark" data-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
