--- a/viewer/public/index.html
+++ b/viewer/public/index.html
@@ -15,69 +15,74 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 
-
     <script src="bundle.js" defer></script>
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
     <script defer src="https://use.fontawesome.com/releases/v5.6.3/js/all.js"></script>
   
     <style>
-        body { margin: 0; padding: 0; font-family: Helvetica; background: black;}
+        body { margin: 0; padding: 0; font-family: Helvetica; background: black; }
         p { margin-top: 0rem; margin-bottom: 0rem; }
-        .container-fluid { padding-left: 0px; padding-right: 0px;}
+        .container-fluid { padding-left: 0px; padding-right: 0px; }
 
-        .index { margin: 1% 0 0 1%; position: absolute; width: 100%;}
-        #js-select-num { margin: 0; z-index: 10; display: none;}
+        .index { margin: 1% 0 0 1%; position: absolute; width: 100%; }
 
-        .room { z-index: -1; position: relative;}
-        .vertical-center {min-height: 100vh; display: flex; align-items: center;}
+        .room { z-index: -1; position: relative; }
+        .vertical-center {min-width: 100%; width: 100vw; height: 100vh; display: flex; align-items: center; justify-content: center; }
+        video { width: 100%; }
         #change-time { display: none; }
-        #change-num {display: none;}
+        #change-buffer { display: none; }
+        #change-num { display: none; }
+        #js-select-num { display: none; }
+        #mode-num { display: none; }
 
-        #modal-button { display: none;}
-        .modal-header { padding: 1rem 2rem;}
-        .modal-body { padding: 2rem;}
+        #modal-button { display: none; }
+        .modal-header { padding: 1rem 2rem; }
+        .modal-body { padding: 2rem; }
 
-        #human-icons { padding: 0% 0.5%; color: #079ad9; font-size: 2rem;}
+        #human-icons { padding: 0% 0.5%; color: #185ADB; font-size: 2rem; }
 
-        .ui { z-index: 15; position: absolute; left: 50%; transform: translateX(-50%); bottom: 10%;}
+        .ui { z-index: 15; position: absolute; left: 50%; transform: translateX(-50%); bottom: 5%; pointer-events: auto; }
+        .viewall { display: none; }
         .radio-tile-group { display: flex; flex-wrap: wrap; justify-content: center; }
-        .input-container { position: relative; height: 4rem; width: 4rem; margin: 0.5rem;} 
+        .input-container { position: relative; height: 4rem; width: 4rem; margin: 0.5rem; } 
         .radio-button { opacity: 0; position: absolute; top: 0; left: 0; height: 100%; width: 100%; margin: 0; cursor: pointer; }
-        .radio-tile { display: flex; flex-direction: column; align-items: center; justify-content: center; width: 100%; height: 100%; border: 2px solid #079ad9; border-radius: 5px; padding: 1rem; transition: transform 300ms ease; }
-        .icon svg { fill: #079ad9; width: 1.5rem; height: 1.5rem; }
-        .radio-tile-label { text-align: center; font-size: 0.5rem; font-weight: 600; text-transform: uppercase; letter-spacing: 1px; color: #079ad9; margin-bottom: 0px;}
-        .radio-button:checked + .radio-tile { background-color: #079ad9; border: 2px solid #079ad9; color: white; transform: scale(1.1, 1.1); }
-        .icon svg { fill: white;}
-        .radio-tile-label { color: white;}
+        .radio-tile { display: flex; flex-direction: column; align-items: center; justify-content: center; width: 100%; height: 100%; border: 2px solid #185ADB; border-radius: 5px; padding: 1rem; transition: transform 300ms ease; }
+        .icon svg { fill: #185ADB; width: 1.5rem; height: 1.5rem; }
+        .radio-tile-label { text-align: center; font-size: 0.5rem; font-weight: 600; text-transform: uppercase; letter-spacing: 1px; color: #185ADB; margin-bottom: 0px; cursor: pointer; }
+        .radio-button:checked + .radio-tile { background-color: #185ADB; border: 2px solid #185ADB; color: white; transform: scale(1.2, 1.2); cursor: pointer; }
+        .icon svg { fill: white; }
+        .radio-tile-label { color: white; }
     </style>
 </head>
 
 <body>
     <div class="container-fluid">
         <div class="index" id="human-num">
-            <p id="js-select-num">0</p>
         </div>
 
-        <div class="ui">
+        <div class="ui" id="js-ui">
+            <form id="target-ui">
             <div class="radio-tile-group">
 
-                <div class="input-container">
-                    <input id="view" class="radio-button" type="radio" name="radio" />
+                <div class="input-container viewall">
+                    <input id="view" class="radio-button" type="radio" name="radio" value=0 onclick="radioSelection(this, 0)"/>
                     <div class="radio-tile">
+                        <label for="view" class="radio-tile-label">
                         <div class="icon view-icon">
                             <svg fill="#000000" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                                 <path d="M20.88,13.22l-6.52-9.9a.75.75,0,0,0-1.23,0l-4.63,7L7.39,9.06s-.18-.24-.51,0L4.52,11.83a.54.54,0,0,0-.09.58.51.51,0,0,0,.44.32h.65L3.8,14.88a.57.57,0,0,0,0,.57.48.48,0,0,0,.45.3l.66,0L3.13,17.86a.58.58,0,0,0-.08.59.46.46,0,0,0,.45.3h3v.57l-.65,1.14s-.15.53.29.54H8.16s.48,0,.33-.54l-.66-1.14v-.58h3a.55.55,0,0,0,.46-.31.56.56,0,0,0-.09-.59L9.42,15.7l.66,0s.3.07.47-.31a.6.6,0,0,0-.08-.56l-.42-.54H11l0,0a1.37,1.37,0,0,1,.17,1.38,1.12,1.12,0,0,1-.39.51l.89,1.11c.37.39.31.61.31.61l0,.78v.57l-.65,1.14s-.15.53.29.54h2.06s.48,0,.33-.54l-.66-1.14v-.58h3a.55.55,0,0,0,.46-.31.56.56,0,0,0-.09-.59L14.93,15.7l.66,0s.3.07.47-.31a.6.6,0,0,0-.08-.56l-.42-.54h4.71a.74.74,0,0,0,.64-.36A.69.69,0,0,0,20.88,13.22ZM13.75,8,12.7,9a.43.43,0,0,0-.31.09l-.18.22-.78-.76L13.75,5,15.68,8Z"/>
                                 <path d="M6.23,7.57A1.74,1.74,0,1,0,4.52,5.83,1.73,1.73,0,0,0,6.23,7.57Z"/>
                             </svg>
                         </div>
-                        <label for="view" class="radio-tile-label">ALL</label>
+                        ALL</label>
                     </div>
                 </div>
 
                 <div class="input-container">
-                    <input id="human" class="radio-button" type="radio" name="radio" />
+                    <input id="human" class="radio-button" type="radio" name="radio" value=1 onclick="radioSelection(this, 1)"/>
                     <div class="radio-tile">
+                        <label for="human" class="radio-tile-label">
                         <div class="icon walk-icon">
                             <svg fill="#000000" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                                 <ellipse cx="12.74" cy="4.89" rx="1.73" ry="1.68"/>
@@ -87,43 +92,49 @@
                                 <polygon points="12.27 20.75 13.95 20.75 13.96 17.66 12.29 15.98 12.27 20.75"/>
                             </svg>
                         </div>
-                        <label for="human" class="radio-tile-label">HUMAN</label>
+                        HUMAN</label>
                     </div>
                 </div>
           
                 <div class="input-container">
-                    <input id="car" class="radio-button" type="radio" name="radio" />
+                    <input id="car" class="radio-button" type="radio" name="radio" value=2 onclick="radioSelection(this, 2)"/>
                     <div class="radio-tile">
+                        <label for="car" class="radio-tile-label">
                         <div class="icon car-icon">
                             <svg fill="#000000" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                                 <path d="M20.92,19.76l-.38-.39a.79.79,0,0,0,.16-.5v-8L18.59,4.94a1.23,1.23,0,0,0-1.16-.79H6.34a1.39,1.39,0,0,0-.55.09L4.65,3.08a.27.27,0,0,0-.38,0l-.82.78a.27.27,0,0,0,0,.38L4.89,5.72v0L6,6.85v0L9,10H9l7.66,7.85h0l1,1v0l.86.88h0l1.14,1.16a.27.27,0,0,0,.38,0l.82-.78A.26.26,0,0,0,20.92,19.76Zm-5.15-6.32a1.49,1.49,0,1,1,1.49,1.48A1.48,1.48,0,0,1,15.77,13.44ZM7.09,5.58H17.24L18.74,10H11.36Z"/>
                                 <path d="M5,10,5.4,8.67,4.24,7.48,3,10.87V19s.25.8.86.8H5.21A.9.9,0,0,0,6,18.87v-1l8.36,0L6.66,10Zm3,3.38a1.49,1.49,0,1,1-1.48-1.48A1.47,1.47,0,0,1,8,13.34Z"/>
                             </svg>
                         </div>
-                        <label for="car" class="radio-tile-label">CAR</label>
+                        CAR</label>
                     </div>
                 </div>
 
                 <div class="input-container">
-                    <input id="bird" class="radio-button" type="radio" name="radio" />
+                    <input id="bird" class="radio-button" type="radio" name="radio" value=3 onclick="radioSelection(this, 3)"/>
                     <div class="radio-tile">
+                        <label for="bird" class="radio-tile-label">
                         <div class="icon bird-icon">
                             <svg fill="#000000" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                                 <path d="M20.92,20.34l-3.84-3.86a8.68,8.68,0,0,0,1.16-1.23,8,8,0,0,0,1.64-7,3.37,3.37,0,0,0-.33-.72L19.26,7l0-.1a4.64,4.64,0,0,0,.38-1.58,12.51,12.51,0,0,0-1.6.45,1.93,1.93,0,0,1-.45.08,5.8,5.8,0,0,0-2.57.71,4.79,4.79,0,0,0-1.65,1.38,11.39,11.39,0,0,0-1.1,1.83l-.18.36-.66-.19q-.64-.18-1.23-.3l-5.94-6a.28.28,0,0,0-.39,0l-.84.79a.26.26,0,0,0,0,.38l4.58,4.6h0l8,8h0l4.06,4.07a.28.28,0,0,0,.39,0l.84-.79A.26.26,0,0,0,20.92,20.34Z"/>
                                 <path d="M5.59,10.18a2.14,2.14,0,0,0-.8,1.39,2.27,2.27,0,0,0,.41,1.14A3.25,3.25,0,0,0,6.6,14l.18,0-.11.16a3.68,3.68,0,0,0-.51,1.26,2,2,0,0,0,0,.73,1.74,1.74,0,0,0,.65.91c.07.06.08.07,0,.08l-1.74.59-1.72.57s1,1.77,1,1.78,1.31-.62,4.09-2l.65-.32.41.09a10.25,10.25,0,0,0,4.24.15l-8-8Z"/>
                             </svg>
                         </div>
-                        <label for="bird" class="radio-tile-label">BIRD</label>
+                        BIRD</label>
                     </div>
                 </div>
 
             </div>
+            </form>
         </div>
         
         <div class="room vertical-center">
             <div class="remote-streams" id="js-remote-streams"></div>
             <button id="change-time"></button>
+            <button id="change-buffer"></button>
             <button id="change-num"></button>
+            <p id="js-select-num">0</p>
+            <p id="mode-num">0</p>
         </div>
     </div>
 
