--- a/viewer/public/index.html
+++ b/viewer/public/index.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="Noise selection/rejection filter">
     <meta property="og:type" content="website">
     <meta property="og:description" content="'Noise selection/rejection filter'は情報科学芸術大学院大学メディア表現研究科修士2年の天野真が制作した作品である。">
-    <!-- <meta property="og:url" content="https://www."> -->
+    <meta property="og:url" content="https://noise-selection-rejection-filter.jp.ngrok.io">
     <meta property="og:site_name" content="Noise selection/rejection filter">
     <meta property="og:image" content="img/thumbnail.png">
 
@@ -143,21 +143,50 @@
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="modalTitle"><strong>Noise selection/rejection filter</strong></h5>
+                    </br>
+                    <h5 class="modal-title" id="modalTitle">
+                        <strong>《 Noise selection/rejection filter 》</strong>
+                    </h5>
+                    </br>
                 </div>
                 <div class="modal-body">
                     <p>
                         修士作品の中間制作物をオンラインで展示する。音の聴取環境を選択的に構築することができるノイズキャンセリング・フィルターは、システムで規定した望まない音を「ノイズ」というラベルを付けて排斥する。ユーザーである我々の知覚は無自覚に変容し、システムの一方的な排除構造に気がつかない。本作品では、都市空間を散策する映像・音に対し、選択的にフィルタリングをかける。鑑賞者の選択によって映像・音が動的に変化し、排除していることを際立たせる。
+                    </p></br>
+                    <p>
+                        "Noise selection/rejection filter" is an interim project of Makoto Amano's master's research. The noise-canceling filter, which can selectively construct the listening environment, excludes unwanted sounds defined by the system with the label "noise". As users, our perception is unconsciously modified, and we are unaware of the system's one-sided exclusionary structure. In this project, selective filtering is applied to the images and sounds that walk through the urban space. The images and sounds dynamically change depending on the viewer's choice, highlighting the exclusion.
                     </p>
                     <hr>
                     <p>
                         <strong>天野 真 / Makoto Amano</strong>
                     </p></br>
                     <p>
-                        1997年福岡県生まれ。情報科学芸術大学院大学メディア表現研究科(IAMAS) Archival Archetyping Project 所属。
+                        1997年福岡県生まれ。
+                    </p>
+                    <p>
+                        情報科学芸術大学院大学メディア表現研究科(IAMAS) Archival Archetyping Project 所属。「社会に実装されたAIに対する抵抗」をテーマに、メディアアート作品の制作を行う。AIを誤用することを通して、メディアを介した人と環境の関係を探る。
+                    </p>
+                    <hr>
+                    <p>
+                        <strong>[展示]</strong>
+                    </p>
+                    <p>
+                        7月22日(木) 10:00-17:00
+                    </p>
+                    <p>
+                        7月23日(金) 10:00-17:00
+                    </p></br>
+                    <p>
+                        <strong>[セッション]</strong>
+                    </p>
+                    <p>
+                        7月23日(金) 11:00-11:30  13:00-13:30  16:30-17:00
                     </p>
                 </div>
                 <div class="modal-footer">
+                    <p>
+                        Closeボタンを押すと音が発生します。音量の調整をご注意ください。
+                    </p>
                     <button type="button" id="exit-button" class="btn btn-outline-dark" data-dismiss="modal">Close</button>
                 </div>
             </div>
