--- a/viewer/public/index.html
+++ b/viewer/public/index.html
@@ -150,6 +150,13 @@
                     </br>
                 </div>
                 <div class="modal-body">
+                    <img src="https://img.shields.io/badge/Safari-Passing-gre.svg?logo=Safari&style=plastic">
+                    <img src="https://img.shields.io/badge/Chrome-Passing-gre.svg?logo=Google%20Chrome&style=plastic">
+                    <img src="https://img.shields.io/badge/Firefox-Passing-red.svg?logo=Firefox&style=plastic">
+                    <p>
+                        ※WiFi環境推奨
+                    </p>
+                    </br>
                     <p>
                         修士作品の中間制作物をオンラインで展示する。音の聴取環境を選択的に構築することができるノイズキャンセリング・フィルターは、システムで規定した望まない音を「ノイズ」というラベルを付けて排斥する。ユーザーである我々の知覚は無自覚に変容し、システムの一方的な排除構造に気がつかない。本作品では、都市空間を散策する映像・音に対し、選択的にフィルタリングをかける。鑑賞者の選択によって映像・音が動的に変化し、排除していることを際立たせる。
                     </p></br>
